add in option to give MC some extra optimization arguments on fast computer's in the options pane